# psychobot

./: .gitignore  ActivationLayer.py  Cost.py  Layer.py  MiddleLayer.py  NeuralNetwork.py  README.md  WordEmbedding.py  activation_functions.py  main.py  package-lock.json  pyproject.toml
Dataset/: dataset_loader.py
NeuralNetwork/: Layer.py  MiddleLayer.py  NeuralNetwork.py  main.py
NeuralNetwork/Architectures/: Architecture.py  Basic.py  LSTM.py
NeuralNetwork/Architectures/GRU/: Cell.py  GRU.py  OutputCell.py
NeuralNetwork/Architectures/LSTM/: Cell.py  LSTM.py  OutputCell.py
NeuralNetwork/Architectures/NEW_LSTM/: NEW_LSTM.py
NeuralNetwork/Architectures/OldGRU/: GRU.py  OutputCell.py
NeuralNetwork/Utillities/: ActivationLayer.py  AddLayer.py  Layer.py  MiddleLayer.py  MultiplyLayer.py  SoftmaxLayer.py  activation_functions.py
Presentations/: PsychoBot - 1st Sprint.pptx  PsychoBot - 2st Sprint.pptx  deepLearning  ספרינט 1 מצגת סיכום.pptx  ספרינט 3 מצגת סיכום.pptx
Word Embedding/: WordEmbedding.py
api/: data.npy  list.json  main.py
tests/: data.npy  list.json  main.py  parameters_['happy', 'sadness', 'anger', 'fear', 'disgust'].json  parameters_['happy', 'sadness', 'anger'].json  parameters_['happy', 'worry'].json
tests/12k-happy-sadness-approval-admiration-surprise-love/: list.json
tests/3k-happy-sadness-anger/: data.npy
tests/all-datasets/30k-happy-sadness-anger/: list.json
website/: Website UML.drawio  package-lock.json  package.json
website/app/: Navbar.tsx  head.tsx  layout.tsx  page.tsx
website/utils/: firebase.js
(+13 files in other folders)
